--- a/app/src/main/resources/templates/compute.mustache
+++ b/app/src/main/resources/templates/compute.mustache
@@ -1,11 +1,13 @@
 <title>My application</title>
-  <h1>Hello, World!</h1>
+  <h1>To find numbers of number between min and max </h1>
+  <h1>Box1:Enter numbers Box2:Enter min value Box3:Enter max value</h1>
     Result is {{result}}
 
 
   <form action="compute" method="post">
-        <textarea name="input1" rows="10" cols="30"></textarea>
-        <textarea name="input2" rows="10" cols="30"></textarea>
+        <textarea name="input1" rows="10" cols="34"></textarea>
+        <textarea name="input2" rows="10" cols="34"></textarea>
+        <textarea name="input3" rows="10" cols="34"></textarea>
         <br>
         <input type="submit">
   </form>
